// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-shipping-address renders 1`] = `
<sc-order-shipping-address>
  <sc-compact-address required=""></sc-compact-address>
</sc-order-shipping-address>
`;

exports[`sc-order-shipping-address renders compact fields if shipping is not enabled 1`] = `
<sc-order-shipping-address>
  <sc-compact-address required=""></sc-compact-address>
</sc-order-shipping-address>
`;

exports[`sc-order-shipping-address renders compact fields loading if shipping is not enabled 1`] = `
<sc-order-shipping-address>
  <sc-compact-address loading="" required=""></sc-compact-address>
</sc-order-shipping-address>
`;

exports[`sc-order-shipping-address renders full fields if shipping is enabled 1`] = `
<sc-order-shipping-address>
  <sc-address label="Shipping Address" required=""></sc-address>
</sc-order-shipping-address>
`;

exports[`sc-order-shipping-address renders full fields loading if shipping is enabled 1`] = `
<sc-order-shipping-address>
  <sc-address label="Shipping Address" loading="" required=""></sc-address>
</sc-order-shipping-address>
`;
